--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+
+p{
+  padding:30px;
+  text-align: center;
+  background-color: bisque;
+}
+
+body{
+  margin:5%;
+}
